--- a/Day_3/Day_3_DSA.ipynb
+++ b/Day_3/Day_3_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFvHa320SO28NC+hTH/z37",
+      "authorship_tag": "ABX9TyPEcnkT9KLvxpIbP3AprBIb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "# **Problem Statement - 1**\n",
         "\n",
-        "--> Impliment a stack using queue\n"
+        "--> Implement a stack using queue\n"
       ],
       "metadata": {
         "id": "P7qh7DHV8xVd"
@@ -114,7 +114,7 @@
       "source": [
         "# **Problem Statement - 2**\n",
         "\n",
-        "--> Impliment a Queue using 2 Stacks"
+        "--> Implement a Queue using 2 Stacks"
       ],
       "metadata": {
         "id": "Nlt5GxW-BrOr"
