--- a/Day_6/Day_6_DSA.ipynb
+++ b/Day_6/Day_6_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML7uoBe2KYa0vIXDcC2LCZ"
+      "authorship_tag": "ABX9TyN2p800sEwXAqAjAb+3BxDW"
     },
     "kernelspec": {
       "name": "python3",
@@ -54,13 +54,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "qcg60bAIVi2A"
       },
       "outputs": [],
       "source": [
-        "def preToInfix(self, pre_exp):\n",
+        "def preToInfix(pre_exp):\n",
         "      i = len(pre_exp)-1\n",
         "      stack = [ ]\n",
         "\n",
@@ -108,6 +108,36 @@
       "metadata": {
         "id": "uC-mSdmv_AHR"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def preToPost(pre_exp):\n",
+        "    stack = [ ]\n",
+        "    i = len(pre_exp)-1\n",
+        "\n",
+        "    while i>=0:\n",
+        "        if pre_exp[i].isalnum():\n",
+        "            stack.append(pre_exp[i])\n",
+        "        else:\n",
+        "            stack.append(stack.pop()+stack.pop()+pre_exp[i])\n",
+        "        i-=1\n",
+        "    return stack.pop()"
+      ],
+      "metadata": {
+        "id": "nZMpSO5JZYq6"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nyqW6i02Z78J"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
