--- a/Day_10(Introduction to Support Vector Machine, Hard Margin Support Vector Machine, Sum of subarray minimum, At least k occurrences )/Day_10_DSA.ipynb
+++ b/Day_10(Introduction to Support Vector Machine, Hard Margin Support Vector Machine, Sum of subarray minimum, At least k occurrences )/Day_10_DSA.ipynb
@@ -185,8 +185,7 @@
         "                if map[i]==k: return i\n",
         "            else:\n",
         "                map[i]=1\n",
-        "        return -1\n",
-        ""
+        "        return -1\n"
       ],
       "metadata": {
         "id": "21IJefxed_zF"
