--- a/Day_10(Introduction to Support Vector Machine, Hard Margin Support Vector Machine, Sum of subarray minimum, At least k occurrences )/Day_10_DSA.ipynb
+++ b/Day_10(Introduction to Support Vector Machine, Hard Margin Support Vector Machine, Sum of subarray minimum, At least k occurrences )/Day_10_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6l+CxYFCu8+eQ42+DEoPr"
+      "authorship_tag": "ABX9TyMJFdANt2uG0FsAFEgLDH9X"
     },
     "kernelspec": {
       "name": "python3",
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "nmQi3RKtcxZ8"
       },
@@ -107,8 +107,12 @@
         "                ans[i]=stack[-1]\n",
         "            stack.append(i)\n",
         "\n",
-        "        return ans\n",
-        "\n",
+        "        return ans\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def sumSubarrayMins(self, arr):\n",
         "\n",
         "        n = len(arr)\n",
@@ -132,7 +136,12 @@
         "            sum = (sum+indivisual_contri) % mod\n",
         "\n",
         "        return sum"
-      ]
+      ],
+      "metadata": {
+        "id": "iKzqwLMB0fex"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
