--- a/Day_10(Introduction to Support Vector Machine, Hard Margin Support Vector Machine, Sum of subarray minimum, At least k occurrences )/Day_10_DSA.ipynb
+++ b/Day_10(Introduction to Support Vector Machine, Hard Margin Support Vector Machine, Sum of subarray minimum, At least k occurrences )/Day_10_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJFdANt2uG0FsAFEgLDH9X"
+      "authorship_tag": "ABX9TyMumXH4phn0H3NUKy/ff72m"
     },
     "kernelspec": {
       "name": "python3",
@@ -90,8 +90,12 @@
         "                ans[i]=stack[-1]\n",
         "            stack.append(i)\n",
         "\n",
-        "        return ans\n",
-        "\n",
+        "        return ans"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def NSE(self,arr):\n",
         "\n",
         "        n = len(arr)\n",
@@ -107,8 +111,13 @@
         "                ans[i]=stack[-1]\n",
         "            stack.append(i)\n",
         "\n",
-        "        return ans\n"
-      ]
+        "        return ans"
+      ],
+      "metadata": {
+        "id": "hwvWpkwf0zkF"
+      },
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "code",
