--- a/Day_13_(Naive Bayes, Sum of subarray range, Asteroid collision)/Day_13_DSA.ipynb
+++ b/Day_13_(Naive Bayes, Sum of subarray range, Asteroid collision)/Day_13_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwB5gI1l6Pfu4cMBV6Zwtn"
+      "authorship_tag": "ABX9TyOGUwzzkzQrQl8Fjgc3S+4z"
     },
     "kernelspec": {
       "name": "python3",
@@ -33,7 +33,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Approach  ( Time Complexity O(n) and Space Complexity O(k) )**\n",
+        "### **Approach  ( Time Complexity O(n) and Space Complexity O(n) )**\n",
         "\n",
         "**Helper Functions (PSEE, NSE, NGE, PGEE):**\n",
         "\n",
