--- a/Day_18_(Regression model of used car price, Delete mid of stack, Valid substring)/Day_18_DSA.ipynb
+++ b/Day_18_(Regression model of used car price, Delete mid of stack, Valid substring)/Day_18_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtW6cytdDVpRrofakd6gT3"
+      "authorship_tag": "ABX9TyPRarioarUCtPnQzHzpeAx4"
     },
     "kernelspec": {
       "name": "python3",
@@ -96,7 +96,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Problem Statement - 2**\n",
-        "**Facing the sun**\n",
+        "**Delete mid of stack**\n",
         "\n",
         "Given a stack, delete the middle element of the stack.\n",
         "\n",
