--- a/Day_48_(ML Animation Project, Subarray With Equal Number of Occurrence, Expression Add Operators)/Day_48_DSA.ipynb
+++ b/Day_48_(ML Animation Project, Subarray With Equal Number of Occurrence, Expression Add Operators)/Day_48_DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvv1SphR+JSgdtNx5TluAF"
+      "authorship_tag": "ABX9TyOkVh35GjEXZxPEyB3vJkme"
     },
     "kernelspec": {
       "name": "python3",
@@ -105,7 +105,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Approach  ( Time Complexity O(n*(log k)) and Space Complexity O(k) )**\n",
+        "### **Approach  ( Time Complexity O(3^n) and Space Complexity O(3^n) )**\n",
         "\n",
         "**Backtracking Function:**\n",
         "\n",
